<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_person"
                    android:layout_width="match_parent"
                    android:layout_height="234dp"
                    android:layout_marginBottom="50dp"
                    android:background="@color/grey"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_person_12"
                    tools:ignore="ImageContrastCheck" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/username"
                    app:startIconDrawable="@drawable/baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        tools:ignore="VisualLintTextFieldSize" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/phone_number"
                    app:startIconDrawable="@drawable/baseline_call_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"

                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"

                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDOB"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/dob"
                    android:inputType="none"
                    app:startIconDrawable="@drawable/baseline_date_range_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"

                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/password"
>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"

                        tools:ignore="VisualLintTextFieldSize" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/confirm"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"

                        tools:ignore="VisualLintTextFieldSize" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_button_background"
                    android:onClick="onSignupClick"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/tVCreateNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCreateNewClick"
                    android:text="@string/haveAcc"
                    android:layout_marginStart="86dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/todo2"
            android:src="@drawable/baseline_add_a_photo_24"
            app:backgroundTint="@color/colorPrimaryDark"
            app:tint="@color/white"
            app:layout_anchor="@id/image_view_person"
            app:layout_anchorGravity="bottom|right|end"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
