<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tVWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCreateNewClick"
                    android:text="@string/welcome"
                    android:textSize="40sp"
                    android:layout_marginStart="76dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="5dp"
                    />


                <TextView
                    android:id="@+id/tVMissed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCreateNewClick"
                    android:text="@string/missed"
                    android:textSize="20sp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/username"
                    app:startIconDrawable="@drawable/baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTUsernamelg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        tools:ignore="VisualLintTextFieldSize" />


                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/password"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTPasswordlg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        tools:ignore="VisualLintTextFieldSize" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_button_background"
                    android:onClick="onLoginClick"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:id="@+id/tVCreateNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onLoginHere"
                    android:text="@string/createAcc"
                    android:layout_marginStart="86dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
